Use date type and move to 5 minute polling

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -236,7 +236,7 @@
                         </div>
                         <div class="field-pair advanced-settings">
                             <label class="config" for="expire_date">$T('srv-expire_date')</label>
-                            <input type="text" name="expire_date" id="expire_date$cur"  value="$server['expire_date']" />
+                            <input type="date" name="expire_date" id="expire_date$cur"  value="$server['expire_date']" />
                             <span class="desc">$T('srv-explain-expire_date')</span>
                         </div>
                         <div class="field-pair advanced-settings">
