--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -109,13 +109,13 @@
                     </div>
                     <div class="field-pair advanced-settings">
                         <label class="config" for="expire_date">$T('srv-expire_date')</label>
-                        <input type="text" name="expire_date" id="expire_date" />
+                        <input type="date" name="expire_date" id="expire_date" />
                         <span class="desc">$T('srv-explain-expire_date')</span>
                     </div>
                     <div class="field-pair advanced-settings">
-                        <label class="config" for="quota_left">$T('srv-quota_left')</label>
+                        <label class="config" for="quota_left">$T('quota-left')</label>
                         <input type="text" name="quota_left" id="quota_left" />
-                        <input type="text" name="usage_at_start" id="usage_at_start" value="0" />
+                        <input type="hidden" name="usage_at_start" id="usage_at_start" value="0" />
                         <span class="desc">$T('srv-explain-quota_left')</span>
                     </div>
                     <div class="field-pair advanced-settings">
@@ -240,7 +240,7 @@
                             <span class="desc">$T('srv-explain-expire_date')</span>
                         </div>
                         <div class="field-pair advanced-settings">
-                            <label class="config" for="quota_left">$T('srv-quota_left')</label>
+                            <label class="config" for="quota_left">$T('quota-left')</label>
                             <input type="text" name="quota_left" id="quota_left$cur" value="$server['quota_left']" />
                             <input type="hidden" name="quota_left_old" id="quota_left_old$cur" value="$server['quota_left']" />
                             <input type="hidden" name="usage_at_start" id="usage_at_start$cur" value="$server['usage_at_start']" />
