Some more reordering and alignment

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -1,6 +1,6 @@
 <div class="history" id="history-tab" data-bind="visible: hasHistory() || displayTabbed()" style="display: none">
-    <h2>$T('menu-history')</h2>
-    <table class="table table-hover history-table paginated">
+    <h2 style="float: $text_align">$T('menu-history')</h2>
+    <table class="table table-hover history-table paginated" dir="ltr">
         <thead>
             <tr>
                 <th style="width: 25px;"></th>
