--- a/interfaces/Glitter/templates/include_menu.tmpl
+++ b/interfaces/Glitter/templates/include_menu.tmpl
@@ -18,7 +18,7 @@
                 <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
                     <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="text-align: $text_align;">
                     <li><a href="#" data-time="5" data-bind="click: pauseTime">$T('Glitter-pause5m')</a></li>
                     <li><a href="#" data-time="15" data-bind="click: pauseTime">$T('Glitter-pause15m')</a></li>
                     <li><a href="#" data-time="30" data-bind="click: pauseTime">$T('Glitter-pause30m')</a></li>
@@ -39,10 +39,10 @@
     </div>
 
     <div class="collapse navbar-collapse <!--#if $have_rss_defined#-->navbar-have-rss<!--#end if#-->" id="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" style="text-align: right;">
             <li class="sparkline-container"><span class="sparkline"></span></li>
             <li class="speedlimit-dropdown dropdown">
-                <div class="btn-group">
+                <div dir="ltr" class="btn-group">
                     <div class="btn-group">
                         <button type="button" class="btn btn-default navbar-btn navbar-speed" data-toggle="dropdown">
                             <span data-bind="text: speedText">0 KB/s</span>
