--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -1,7 +1,7 @@
 <div class="queue active" id="queue-tab">
-    <h2>$T('menu-queue')</h2>
+    <h2 style="float: $text_align">$T('menu-queue')</h2>
 
-    <div class="info-container" data-bind="visible: diskSpaceLeft1()" style="display: none;">
+    <div class="info-container" data-bind="visible: diskSpaceLeft1()" style="display: none; float: $text_align_reverse;">
         <!-- ko if: hasWarnings()  -->
         <div class="info-container-box">
             <a href="#queue-messages" class="queue-error-info">
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <table class="table table-striped table-hover queue-table">
+    <table class="table table-striped table-hover queue-table" dir="ltr">
         <thead>
             <tr>
                 <th style="width: 25px;"></th>
