Revert some changes and handle styling using CSS

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -4,7 +4,7 @@
     #set global $root = '../../'#
 #end if#
 <!DOCTYPE HTML>
-<html lang="$active_lang" dir="$text_direction">
+<html lang="$active_lang">
 <head>
     <title>
         SABnzbd $T('menu-config')
