--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -1,7 +1,7 @@
 <div class="queue active" id="queue-tab">
-    <h2 style="float: $text_align">$T('menu-queue')</h2>
+    <h2>$T('menu-queue')</h2>
 
-    <div class="info-container" data-bind="visible: diskSpaceLeft1()" style="display: none; float: $text_align_reverse;">
+    <div class="info-container" data-bind="visible: diskSpaceLeft1()" style="display: none;">
         <!-- ko if: hasWarnings()  -->
         <div class="info-container-box">
             <a href="#queue-messages" class="queue-error-info">
@@ -51,7 +51,7 @@
             <a href="#" data-bind="click: queue.showMultiEdit">
                 <span class="glyphicon glyphicon-tasks" data-tooltip="true" data-placement="left" title="$T('Glitter-multiOperations')"></span>
             </a>
-            <ul class="dropdown-menu" style="text-align: $text_align;">
+            <ul class="dropdown-menu">
                 <li><a href="#" data-action="sortAgeAsc" data-bind="click: queue.queueSorting">$T('Glitter-sortAgeAsc')</a></li>
                 <li><a href="#" data-action="sortAgeDesc" data-bind="click: queue.queueSorting">$T('Glitter-sortAgeDesc')</a></li>
                 <li><a href="#" data-action="sortNameAsc" data-bind="click: queue.queueSorting">$T('Glitter-sortNameAsc')</a></li>
@@ -116,7 +116,7 @@
                         <a href="#" data-bind="click: \$parent.queue.moveButton" class="hover-button buttonMoveToTop" title="$T('Glitter-top')"><span class="glyphicon glyphicon-chevron-up"></span></a>
                         <a href="#" data-bind="click: \$parent.queue.moveButton" class="hover-button buttonMoveToBottom" title="$T('Glitter-bottom')"><span class="glyphicon glyphicon-chevron-down"></span></a>
                         <a href="#" data-bind="click: editName" class="hover-button" title="$T('Glitter-rename')"><span class="glyphicon glyphicon-pencil"></span></a>
-                        <a dir="$text_direction" href="#" data-bind="click: showFiles" class="hover-button" title="$T('nzoDetails') - $T('srv-password')"><span class="glyphicon glyphicon-folder-open"></span></a>
+                        <a href="#" data-bind="click: showFiles" class="hover-button" title="$T('nzoDetails') - $T('srv-password')"><span class="glyphicon glyphicon-folder-open"></span></a>
                         <small data-bind="text: avg_age"></small>
                     </div>
                 </td>
@@ -145,7 +145,7 @@
                             <span class="caret"></span>
                         </a>
                         <!-- ko if: hasDropdown()  -->
-                        <ul class="dropdown-menu queue-item-settings" dir="$text_direction">
+                        <ul class="dropdown-menu queue-item-settings">
                             <li title="$T('category')" data-tooltip="true" data-placement="left">
                                 <span class="glyphicon glyphicon-tag"></span>
                                 <select name="Category" class="form-control" data-bind="options: parent.categoriesList, optionsValue: 'catValue', optionsText: 'catText',  value: category, event: { change: changeCat }"></select>
