Move more items to CSS

--- a/interfaces/Glitter/templates/include_menu.tmpl
+++ b/interfaces/Glitter/templates/include_menu.tmpl
@@ -39,10 +39,10 @@
     </div>
 
     <div class="collapse navbar-collapse <!--#if $have_rss_defined#-->navbar-have-rss<!--#end if#-->" id="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right" style="text-align: right;">
+        <ul class="nav navbar-nav navbar-right">
             <li class="sparkline-container"><span class="sparkline"></span></li>
             <li class="speedlimit-dropdown dropdown">
-                <div dir="ltr" class="btn-group">
+                <div class="btn-group">
                     <div class="btn-group">
                         <button type="button" class="btn btn-default navbar-btn navbar-speed" data-toggle="dropdown">
                             <span data-bind="text: speedText">0 KB/s</span>
