--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -536,7 +536,7 @@
                 <h4 dir="ltr" class="modal-title row-wrap-text" data-bind="text: filelist.filelist_name">$T('Glitter-loading')</h4>
             </div>
             <div class="modal-body">
-                <div id="modal-item-filelist" dir="ltr">
+                <div id="modal-item-filelist">
                     <form data-bind="submit: filelist.setNzbPassword" class="form-inline">
                         <div class="form-group">
                             <div class="input-group">
