--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -4,7 +4,7 @@
     #set global $root = '../../'#
 #end if#
 <!DOCTYPE HTML>
-<html lang="$active_lang">
+<html lang="$active_lang" #if $rtl#dir="rtl"#end if#>
 <head>
     <title>
         SABnzbd $T('menu-config')
