--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <table class="table table-striped table-hover queue-table" dir="ltr">
+    <table class="table table-striped table-hover queue-table">
         <thead>
             <tr>
                 <th style="width: 25px;"></th>
