--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -162,6 +162,7 @@ input[type="checkbox"]+.desc {
     float: none;
     overflow: hidden;
     min-width: 555px;
+    position: relative;
 }
 .Key tr:nth-child(odd),
 .tab-pane tr:nth-child(odd),
@@ -1167,6 +1168,28 @@ input[type="checkbox"] {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(359deg); }
 }
+
+/***
+    RTL Fixes
+***/
+html[dir="rtl"] .col1 input[type='checkbox'],
+html[dir="rtl"] .col2 h3 a {
+    left: 5px;
+}
+
+html[dir="rtl"] .modal-header .close {
+    float: left;
+}
+
+html[dir="rtl"] .Sorting .presets.float-left,
+html[dir="rtl"] .checkbox-days {
+    float: none;
+}
+
+html[dir="rtl"] .Scheduling form[action="addSchedule"] input[type="checkbox"] {
+    right: 5px;
+}
+
 
 @media screen and (min-width: 1200px) {
     .Categories input[name="dir"] {
