Right-to-Left support for Glitter and Config (#1776)
* Add rtl on main page

* Adjustments to rtl

* Forgot to add black check for this checkout

* Remove unnecessary style

* Remove more redundant attributes

* Some more reordering and alignment

* Align sorting and nzb drop downs

* Update NZB details and shutdown page

* Fix format

* Fix SABnzbd Config title tag

* Change file list header direction

* Set rtl variables in build_header instead and test dir="rtl" in config pages

* Revert some changes and handle styling using CSS

* Move more items to CSS

* Config RTL

* Move even more to CSS

* Small tweak

Co-authored-by: Safihre <safihre@sabnzbd.org>

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1979,6 +1979,45 @@ input[name="nzbURL"] {
     }
 }
 
+/***
+    RTL Fixes
+***/
+
+html[dir="rtl"] .navbar-nav {
+    padding-right: 0;
+}
+
+html[dir="rtl"] .queue h2,
+html[dir="rtl"] .history h2 {
+    float: right;
+}
+
+html[dir="rtl"] .dropdown-menu {
+    text-align: right;
+    direction: rtl;
+}
+
+html[dir="rtl"] .speedlimit-dropdown,
+html[dir="rtl"] .progress-indicator,
+html[dir="rtl"] #modal-item-filelist,
+html[dir="rtl"] #modal-item-files .modal-title,
+html[dir="rtl"] .info-container-box,
+html[dir="rtl"] .queue-table,
+html[dir="rtl"] .history-table {
+    direction: ltr;
+}
+
+html[dir="rtl"] .search-box a {
+    right: initial;
+    left: 8px;
+}
+
+html[dir="rtl"] .navbar-logo,
+html[dir="rtl"] .info-container,
+html[dir="rtl"] .modal-header .close,
+html[dir="rtl"] #modal-options .modal-header a {
+    float: left;
+}
 
 /***
     Bootstrap overwrites
