add resolution pattern key to sorting

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -131,6 +131,11 @@
                                     <td>$T('ep-us-name')</td>
                                 </tr>
                                 <tr>
+                                    <td class="align-right"><b>$T('Resolution'):</b></td>
+                                    <td>%r</td>
+                                    <td>1080p</td>
+                                </tr>
+                                <tr>
                                     <td class="align-right"><b>$T('fileExt'):</b></td>
                                     <td>%ext</td>
                                     <td>avi</td>
@@ -244,6 +249,11 @@
                                     <td class="align-right"><b>$T('year'):</b></td>
                                     <td>%y</td>
                                     <td>2009</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('Resolution'):</b></td>
+                                    <td>%r</td>
+                                    <td>1080p</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('extension'):</b></td>
@@ -406,6 +416,11 @@
                                     <td>&nbsp;</td>
                                     <td>%0decade</td>
                                     <td>2000</td>
+                                </tr>
+                                <tr>
+                                    <td class="align-right"><b>$T('Resolution'):</b></td>
+                                    <td>%r</td>
+                                    <td>1080p</td>
                                 </tr>
                                 <tr>
                                     <td class="align-right"><b>$T('orgFilename'):</b></td>
