glitter night - fix search border color

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -165,6 +165,8 @@ tbody>tr:last-child td,
 input,
 input.form-control,
 .input-group-addon,
+.search-box input:focus,
+.search-box input:valid,
 select.form-control,
 #modal-options .table-server-connections th,
 .main-content .btn-default,
