--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -551,6 +551,16 @@ tr.separator {
     padding-right: 13px;
 }
 /* --  */
+.RSS .addRssTable,
+.RSS .addRssTable input[type="text"] {
+    width: 100%;
+}
+.RSS .addRssTable .new-feed-title {
+    max-width: 250px;
+}
+.RSS .addRssTable .new-feed-url {
+    width: 70%;
+}
 h2.activeRSS {
     margin-bottom: 10px;
 }
@@ -560,12 +570,12 @@ h2.activeRSS {
     text-decoration: underline !important;
 }
 .favicon {
-    background-position: center center!important;
-    background-size: 16px 16px;
+    background-position: center center !important;
+    background-size: 22px 22px;
     opacity: 1;
     top: -1px;
-    height: 16px;
-    width: 16px;
+    height: 22px;
+    width: 22px;
     float: left;
     margin: 0 6px 0 2px;
     text-align: center;
@@ -585,6 +595,7 @@ h2.activeRSS {
 }
 #subscriptions {
     border: 1px solid #E5E5E5;
+    width: 100%;
 }
 .data-row {
     border-top: 1px solid #E5E5E5;
@@ -596,6 +607,7 @@ h2.activeRSS {
 #subscriptions .chk {
     padding: 8px 5px 5px;
     vertical-align: middle;
+    width: 40px;
 }
 #subscriptions .title {
     font-weight: bold;
@@ -603,10 +615,11 @@ h2.activeRSS {
     width: auto;
 }
 #subscriptions .favicon {
-    margin-left: 8px;
+    margin-left: 7px;
+    margin-top: -2px;
 }
-.ie6 .subscription-title {
-    width: 20em;
+#subscriptions .glyphicon {
+    margin-top: 3px;
 }
 .subscription-title,
 .subscription-title:hover {
